[package]
name = "grpc_io_example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proto"
path = "src/proto/mod.rs"

[[bin]]
name = "ping-pong-server"
path = "src/ping_pong/server.rs"

[[bin]]
name = "ping-pong-client"
path = "src/ping_pong/client.rs"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf"]
#protobufv3-codec = ["protobufv3", "grpcio/protobufv3-codec", "grpcio-proto/protobufv3-codec", "grpcio-health/protobufv3-codec"]

[dependencies]
futures = "0.3.29"
futures-util = { version = "0.3.29", features = ["sink"] }
futures-channel = { version = "0.3", features = ["sink"] }
futures-executor = "0.3"
grpcio = "0.13.0"
protobuf = { version = "2.28.0", optional = true }
protobufv3 = { package = "protobuf", version = "3.2", optional = true }

[build-dependencies]
protoc-grpcio = "3.0.0"
#grpcio-proto = { path = "../proto", default-features = false }
